feat: linked UI with server1
